--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/luisdeseta/datawarehouse#readme",
   "dependencies": {
+    "@koa/cors": "^3.3.0",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.1",
     "cors": "^2.8.5",
