--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "sequelize": "^6.6.5"
   },
   "devDependencies": {
+    "dotenv-webpack": "^8.0.1",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0"
   }
