--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "proyecto_datawarehouse",
   "version": "1.0.0",
-  "description": "Proyecto Final del Sprint 3 de Acama DWFS grupo 72",
+  "description": "Proyecto Final del Sprint 3 de Acamica DWFS grupo 72",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
